Edit: updated layout and styles

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <section class="services py-5" id="services" data-bs-target="3">
             <h1 class="text-center text-capitalize">our services</h1>
             <div class="container">
-                <div class="row  py-5">
+                <div class="row  py-5 g-4">
                     <div class="col-lg-3 col-md-6 col-12">
                         <div class="inner text-center">
                             <div class="icon py-2">
@@ -119,6 +119,8 @@
                             <div class="content py-2">
                                 <p>Restore volume and enhance facial contours with FDA-approved dermal fillers for a youthful glow.</p>
                             </div>
+                            <br/>
+                            
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-12">
@@ -184,7 +186,7 @@
         <section class="test py-5" id="test" data-bs-target="5">
             <h1 class="text-center">Treatments</h1>
             <div class="container">
-                <div class="row py-5">
+                <div class="row py-5 g-5">
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="inner text-center py-3 px-2">
                             <div class="image py-2">
@@ -299,7 +301,7 @@
     <!-- -------------------------start-footer------------------------------->
     <footer>
         <div class="container">
-            <div class="row">
+            <div class="row g-5">
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="footer-brand">
                         <h2>GlowSpace Clinic</h2>
