--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <!-- -------------------------start-hero------------------------------->
         <section  class="hero py-5" id="home" data-bs-target="1">
-            <div    class="container">
+            <div  class="container pt-5">
                 <div class="row d-flex align-items-center justify-content-center">
                     <div class="col-lg-7 col-12">
                         <div class="content ">
